cabal-version: 1.12

name:           brainfuck
version:        0.1.0.0
synopsis:       A small brainfuck interpreter
description:    A small brainfuck interpreter
category:       Other
homepage:       https://github.com/KrisRalph/brainfuck#readme
author:         Kris Ralph
maintainer:     kris.ralph45@gmail.com
copyright:      2020 Kristofer Ralph
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/KrisRalph/brainfuck

library
  exposed-modules:
      Main
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , lens
    , text
    , data-default
    , mtl
    , bytestring
    , data-default
  default-language: Haskell2010

executable brainfuck
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      brainfuck
    , base >=4.7 && <5
    , containers
    , lens
    , text
    , mtl
    , bytestring
    , data-default
    , binary
  default-language: Haskell2010
